cleanup div arrangement add margin to ensure title does not overlap with close button

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,7 +62,6 @@ a.button:hover {
 .modal-header {
   width: 100%;
   padding: 24px;
-  padding-bottom: 0;
 }
 
 #close-icon {
